--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             for (let i = 0; i < 10; i++) {
                 try {
-                    const response = await fetch("https://en.wikipedia.org/api/rest_v1/page/random/summary");
+                    const response = await fetch("https://ja.wikipedia.org/api/rest_v1/page/random/summary");
                     const data = await response.json();
 
                     const articleDiv = document.createElement("div");
