--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="ja">
 <head>
     <title>ウィキペディア 10連ガチャ</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style/main.css" />
     <script src="src/main.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
 <body>
