--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>ウィキペディア 10連ガチャ</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style/main.css" />
-    <script src="src/main.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
@@ -13,7 +12,7 @@
     <div id="content">
         <h1>ウィキペディア<br>10連ガチャ</h1>
 
-        <select id="language" title="language">
+        <select id="language-select" title="language">
             <option>日本語/ja</option>
             <option>英語/en</option>
             <option>ドイツ語/de</option>
@@ -65,60 +64,16 @@
             <option>マラーティー語/mr</option>
         </select>
 
-        <button id="generate">引く</button>
+        <button id="generate-button">引く</button>
 
-        <p id="loading"></p>
+        <p id="loading-text"></p>
         <div id="app-content">
 
         </div>
     </div>
 
-    <script>
-        const container = document.getElementById("app-content");
-        const languageSelect = document.getElementById("language");
-
-        var key = 0;
-
-        document.getElementById("generate").addEventListener("click", async () => {
-            container.innerHTML = ""; // Clear previous articles
-            document.getElementById("loading").innerHTML = "読み込み中……";
-            key++;
-            const currentKey = key;
-            const language = languageSelect.value.split("/")[1];
-
-            for (let i = 0; i < 10; i++) {
-                try {
-                    const response = await fetch(`https://${language}.wikipedia.org/api/rest_v1/page/random/summary`);
-                    const data = await response.json();
-
-                    const articleDiv = document.createElement("div");
-                    articleDiv.className = "article";
-
-                    const imgHtml = data.thumbnail
-                        ? `<div class="thumbnail-div"><img class="thumbnail" src="${data.thumbnail.source}" alt="${data.title}"></div>`
-                        : `<div class="thumbnail-div"><img class="thumbnail" src="res/NoImage.png"></div>`;
-
-                    articleDiv.innerHTML = `
-                ${imgHtml}
-                <h2>${data.title}</h2>
-                <p>${data.extract}</p>
-                <a href="${data.content_urls.desktop.page}" target="_blank">記事を読む</a>
-            `;
-                    if (key != currentKey) {
-                        break;
-                    }
-                    container.appendChild(articleDiv);
-                } catch (err) {
-                    console.error(err);
-                    const errorDiv = document.createElement("div");
-                    errorDiv.className = "article";
-                    errorDiv.textContent = "読み込み失敗";
-                    container.appendChild(errorDiv);
-                }
-            }
-            document.getElementById("loading").innerHTML = "読み込み完了";
-        });
-    </script>
+    <script src="src/gacha.js"></script>
+    <script src="src/languages.js"></script>
 </body>
 
 </html>
