UIの細かな修正

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
     <div id="content">
         <h1>ウィキペディア<br>10連ガチャ</h1>
+        
+        <div id="app-content"></div>
+        
+        <p id="loading-text"></p>
 
         <select id="language-select" title="language">
             <option>日本語/ja</option>
@@ -65,11 +69,6 @@
         </select>
 
         <button id="generate-button">引く</button>
-
-        <p id="loading-text"></p>
-        <div id="app-content">
-
-        </div>
     </div>
 
     <script src="src/gacha.js"></script>
